feature: tryed to parse owl from main test page

--- a/index-hotel.html
+++ b/index-hotel.html
@@ -13,8 +13,8 @@
 <link href="fonts/opensans/ui.font.opensans.css?15819408112003" type="text/css"  rel="stylesheet" /> 
 <link href="/bitrix/js/main/core/css/core_popup.css?158194081017731" type="text/css"  rel="stylesheet" />
 <link href="/bitrix/templates/.default/components/bitrix/system.pagenavigation/tb-red/style.css?1581940812409" type="text/css"  rel="stylesheet" />
-<link href="css/vendor.css?158194081259894" type="text/css"  data-template-style="true"  rel="stylesheet" />
-<link href="css/main.css?1582804830122395" type="text/css"  data-template-style="true"  rel="stylesheet" />
+<link href="css/vendor.css" type="text/css"  data-template-style="true"  rel="stylesheet" />
+<link href="css/main.css" type="text/css"  data-template-style="true"  rel="stylesheet" />
 <link href="js/jquery.fancybox.min.css" type="text/css"  data-template-style="true"  rel="stylesheet" />
 <link href="js/jquery.mCustomScrollbar.css" type="text/css"  data-template-style="true"  rel="stylesheet" />
 <link href="css/custom.css?158280628634425" type="text/css"  data-template-style="true"  rel="stylesheet" />
