created new block Акции и нововсти

--- a/index-main.html
+++ b/index-main.html
@@ -1188,6 +1188,124 @@
 		</div>
 </div>
 
+<div class="container">
+	<div class="title-news">
+		<div class="title-news-item title-news-item-first">
+			<span>АКЦИИ</span>
+		</div>
+		<div class="title-news-item title-news-item-second">
+			<span>
+				НОВОСТИ
+			</span>
+		</div>
+	</div>
+
+<div class="news">
+	<div class="news-wrapper">
+		<div class="news-wrapper-item news-wrapper-item-on">
+			<div class="stock stock-on">
+				<div class="stock-img">
+					<img src="img/main-page/coffee-table.png" alt="coffee_table">
+					<span>СКИДКА НА КОМПЛЕКСНОЕ РЕШЕНИЕ</span>
+				</div>
+				<div class="stock-img-description">
+					<p>
+					<span>С 15 марта по 15 апреля</span><br>
+					Рыбатекст используется дизайнерами,
+					проектировщиками и фронтендерами,
+					когда нужно быстро заполнить макеты
+					или прототипы содержимым. 
+					</p>
+				</div>
+			</div>
+		</div>
+	<div class="news-wrapper-item">
+		<div class="stock first-stock">
+			<div class="stock-img">
+				<img src="img/main-page/coffee-table.png" alt="coffee_table">
+				<span>СКИДКА НА КОМПЛЕКСНОЕ РЕШЕНИЕ</span>
+			</div>
+			<div class="stock-img-description">
+				<p>
+				<span>С 15 марта по 15 апреля</span><br>
+				Рыбатекст используется дизайнерами,
+				проектировщиками и фронтендерами,
+				когда нужно быстро заполнить макеты
+				или прототипы содержимым. 
+				</p>
+			</div>
+		</div>
+		<div class="stock">
+			<div class="stock-img">
+				<img src="img/main-page/coffee-table.png" alt="coffee_table">
+				<span>СКИДКА НА КОМПЛЕКСНОЕ РЕШЕНИЕ</span>
+			</div>
+			<div class="stock-img-description">
+				<p>
+				<span>С 15 марта по 15 апреля</span><br>
+				Рыбатекст используется дизайнерами,
+				проектировщиками и фронтендерами,
+				когда нужно быстро заполнить макеты
+				или прототипы содержимым. 
+				</p>
+			</div>
+		</div>
+	</div>
+	</div>
+     <div class="news-anwrapper">
+		<div class="news-wrapper-item">
+			<div class="stock right-first-stock">
+				<img src="img/main-page/kitchen.png" alt="kitchen">
+				<h2>ОТКРЫТИЕ НОВОГО Кафе<br> 
+					В ЦЕНТРЕ МОСКВЫ</h2>
+				<p>
+					Рыбатекст используется дизайнерами,
+					проектировщиками и фронтендерами, когда
+					нужно быстро заполнить макеты или прототипы 
+					содержимым. Это тестовый контент, который
+					не должен нести никакого смысла, лишь показать
+					наличие самого текста или продемонстрировать
+					типографику в деле.<br>
+					<span>15 апреля</span> 
+				</p>
+			</div>
+			<div class="stock">
+				<img src="img/main-page/kitchen.png" alt="kitchen">
+				<h2>ОТКРЫТИЕ НОВОГО Кафе<br> 
+					В ЦЕНТРЕ МОСКВЫ</h2>
+				<p>
+					Рыбатекст используется дизайнерами,
+					проектировщиками и фронтендерами, когда
+					нужно быстро заполнить макеты или прототипы 
+					содержимым. Это тестовый контент, который
+					не должен нести никакого смысла, лишь показать
+					наличие самого текста или продемонстрировать
+					типографику в деле.<br>
+					<span>15 апреля</span> 
+				</p>
+			</div>
+		</div>
+		<div class="news-wrapper-item news-wrapper-item-off">
+			<div class="stock stock-off">
+				<img src="img/main-page/kitchen.png" alt="kitchen">
+				<h2>ОТКРЫТИЕ НОВОГО Кафе<br> 
+					В ЦЕНТРЕ МОСКВЫ</h2>
+				<p>
+					Рыбатекст используется дизайнерами,
+					проектировщиками и фронтендерами, когда
+					нужно быстро заполнить макеты или прототипы 
+					содержимым. Это тестовый контент, который
+					не должен нести никакого смысла, лишь показать
+					наличие самого текста или продемонстрировать
+					типографику в деле.<br>
+					<span>15 апреля</span> 
+				</p>
+			</div>
+		</div>
+	 </div>
+	</div>
+
+</div>
 
 
 <!-- FOOTER PART -->
