ft: закончил реализовать декстоп , осталось внимательно всё проверить по отступам и начать уже делать адаптив

--- a/index-main.html
+++ b/index-main.html
@@ -14,6 +14,7 @@
 <link href="/bitrix/templates/.default/components/bitrix/system.pagenavigation/tb-red/style.css?1581940812409" type="text/css"  rel="stylesheet" />
 <link href="css/vendor.css?158194081259894" type="text/css"  data-template-style="true"  rel="stylesheet" />
 <link href="css/main.css?1582804830122395" type="text/css"  data-template-style="true"  rel="stylesheet" />
+<link href="css/style.css" type="text/css"  data-template-style="true"  rel="stylesheet" />
 <link href="js/jquery.fancybox.min.css" type="text/css"  data-template-style="true"  rel="stylesheet" />
 <link href="js/jquery.mCustomScrollbar.css" type="text/css"  data-template-style="true"  rel="stylesheet" />
 <link href="css/custom.css?158280628634425" type="text/css"  data-template-style="true"  rel="stylesheet" />
@@ -31,6 +32,7 @@
 <script type="text/javascript" src="/bitrix/js/main/loadext/extension.js?15819408112895"></script>
 <script type="text/javascript" src="/bitrix/js/main/core/core_popup.js?158194081076073"></script> -->
 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
+<script type="text/javascript" src="js/script.js"></script>
 <script type="text/javascript" src="js/jquery.hidden.text.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <script type="text/javascript" src="js/jquery.fancybox.min.js"></script>
@@ -1304,11 +1306,133 @@
 		</div>
 	 </div>
 	</div>
-
+</div>
+<div class="container">
+	<div class="title"><span>Другие категории</span></div>
+</div>	
+	<ul class="section__list">
+		<li class="section__item">
+<div class="section__title">Ширина, см</div>
+<ul class="section__menu">                                    
+								 <li><a href="filter/width-from-47-to-47/" class="section__link">Ширина, см 47</a></li>
+								 <li><a href="filter/width-from-47-to-47/" class="section__link">Ширина, см 47</a></li>
+								 <li><a href="filter/width-from-57-to-57/" class="section__link">Ширина, см 57</a></li>
+								 <li><a href="filter/width-from-67-to-67/" class="section__link">Ширина, см 67</a></li>
+								 <li><a href="filter/width-from-77-to-77/" class="section__link">Ширина, см 77</a></li>
+								 <li><a href="filter/width-from-87-to-87/" class="section__link">Ширина, см 87</a></li>
+								 <li><a href="filter/width-from-97-to-97/" class="section__link">Ширина, см 97</a></li>
+						 </ul>
+</li>
+		<li class="section__item">
+<div class="section__title">Глубина, см</div>
+<ul class="section__menu">                                    
+								 <li><a href="filter/glubina-from-5.5000-to-5.5000/" class="section__link">Глубина, см 5.5000</a></li>
+								 <li><a href="filter/glubina-from-6-to-6/" class="section__link">Глубина, см 6</a></li>
+								 <li><a href="filter/glubina-from-15-to-15/" class="section__link">Глубина, см 15</a></li>
+								 <li><a href="filter/glubina-from-24-to-24/" class="section__link">Глубина, см 24</a></li>
+								 <li><a href="filter/glubina-from-33-to-33/" class="section__link">Глубина, см 33</a></li>
+								 <li><a href="filter/glubina-from-42-to-42/" class="section__link">Глубина, см 42</a></li>
+								 <li><a href="filter/glubina-from-51-to-51/" class="section__link">Глубина, см 51</a></li>
+								 <li><a href="filter/glubina-from-60-to-60/" class="section__link">Глубина, см 60</a></li>
+								 <li><a href="filter/glubina-from-69-to-69/" class="section__link">Глубина, см 69</a></li>
+								 <li><a href="filter/glubina-from-78-to-78/" class="section__link">Глубина, см 78</a></li>
+								 <li><a href="filter/glubina-from-87-to-87/" class="section__link">Глубина, см 87</a></li>
+								 <li><a href="filter/glubina-from-96-to-96/" class="section__link">Глубина, см 96</a></li>
+						 </ul>
+</li>
+		<li class="section__item">
+<div class="section__title">Высота, см</div>
+<ul class="section__menu">                                    
+								 <li><a href="filter/height-from-8-to-8/" class="section__link">Высота, см 8</a></li>
+								 <li><a href="filter/height-from-8-to-8/" class="section__link">Высота, см 8</a></li>
+								 <li><a href="filter/height-from-20-to-20/" class="section__link">Высота, см 20</a></li>
+								 <li><a href="filter/height-from-32-to-32/" class="section__link">Высота, см 32</a></li>
+								 <li><a href="filter/height-from-44-to-44/" class="section__link">Высота, см 44</a></li>
+								 <li><a href="filter/height-from-56-to-56/" class="section__link">Высота, см 56</a></li>
+								 <li><a href="filter/height-from-68-to-68/" class="section__link">Высота, см 68</a></li>
+								 <li><a href="filter/height-from-80-to-80/" class="section__link">Высота, см 80</a></li>
+								 <li><a href="filter/height-from-92-to-92/" class="section__link">Высота, см 92</a></li>
+								 <li><a href="filter/height-from-104-to-104/" class="section__link">Высота, см 104</a></li>
+								 <li><a href="filter/height-from-116-to-116/" class="section__link">Высота, см 116</a></li>
+						 </ul>
+</li>
+		<li class="section__item">
+<div class="section__title">Каркас</div>
+<ul class="section__menu">                                    
+								 <li><a href="filter/filter_karkas-is-wood/" class="section__link">Дерево</a></li>
+								 <li><a href="filter/filter_karkas-is-metall/" class="section__link">Металл</a></li>
+						 </ul>
+</li>
+		<li class="section__item">
+<div class="section__title">Материал</div>
+<ul class="section__menu">                                    
+								 <li><a href="filter/podstol_material-is-wood/" class="section__link">Дерево</a></li>
+								 <li><a href="filter/podstol_material-is-plast/" class="section__link">Пластик</a></li>
+						 </ul>
+</li>
+		<li class="section__item">
+<div class="section__title">Сидение</div>
+<ul class="section__menu">                                    
+								 <li><a href="filter/sid_type-is-hard/" class="section__link">Жесткое</a></li>
+								 <li><a href="filter/sid_type-is-soft/" class="section__link">Мягкое</a></li>
+						 </ul>
+</li>
+		<li class="section__item">
+<div class="section__title">Спинка</div>
+<ul class="section__menu">                                    
+								 <li><a href="filter/spin_type-is-hard/" class="section__link">Жесткая</a></li>
+								 <li><a href="filter/spin_type-is-soft/" class="section__link">Мягкая</a></li>
+						 </ul>
+</li>
+		<li class="section__item">
+<div class="section__title">Подлокотник</div>
+<ul class="section__menu">                                    
+								 <li><a href="filter/podlokotniki-is-no/" class="section__link">Без подлокотника</a></li>
+								 <li><a href="filter/podlokotniki-is-yes/" class="section__link">С подлокотником</a></li>
+						 </ul>
+</li>
+</ul>
 </div>
 
 
-<!-- FOOTER PART -->
+<div class="container main_page_after_test paragraph">
+	<div>
+		<p>
+			 ТехноБар – компания идущая в ногу со временем. Отдавая предпочтение передовым трендам мебели HoReCa мы не забываем о проверенных, классических направлениях. Мы предлагаем полный комплекс услуг для организаций общественного питания: ресторанов, баров, кафе, гостиниц и хостелов. У нас представлено новейшее оборудование от ведущих мировых производителей, современная, стильная и комфортная мебель для кафе, баров и ресторанов. Широкий ассортимент в нашем каталоге каталоге позволит найти решение даже для самых изысканных интерьеров. Ассортимент представлен такими категориями товаров, как:
+		</p>
+		<ul>
+			<li>Стулья и столы.</li>
+			<li>Кресла и диваны.</li>
+			<li>Банкетная и плетеная мебель.</li>
+			<li>Подстолья и столешницы.</li>
+			<li>Состаренная мебель.</li>
+			<li>Барные стойки и ресепшен.</li>
+		</ul>
+		<p>
+			 Отдельное внимание заслуживает большой выбор мебели, реализованной в стиле лофт. Она отлично подходит для баров с кирпичными и бетонными стенами, а также легко вписывается в индустриальные интерьеры.
+		</p>
+		<p>
+			 Наши основные преимущества:
+		</p>
+		<ul>
+			<li>Компания ТехноБар, на рынке с 2008 года, мы имеем множество реализованных <a href="/about/portfolio/">успешных проектов</a>.</li>
+			<li>Собственное многопрофильное <a href="/about/">производство</a> с использованием современного оборудования.</li>
+			<li>Большой выбор только качественных материалов для изготовления и отделки мебели.</li>
+			<li>Услуги реализации <a href="/design-engineering/">проекта под ключ</a>, в том числе проектирование, подбор мебели под дизайн проекта.</li>
+			<li>Привлекательная стоимость изготовления мебели.</li>
+			<li><a href="/service/">Гарантийное</a> и постгарантийное обслуживание.</li>
+		</ul>
+	</div>
+	<div>
+		<p>
+			 Ассортимент нашей продукции поистине огромен, каким бы ни был интерьер Вашего заведения, Вы всегда сможете подобрать для него современную, комфортную, оригинальную обстановку, прекрасно гармонирующую со стилистикой помещения. Мы создаем изделия, которые становятся настоящей изюминкой интерьера, украшением каждого зала. Наглядный каталог с фотографиями, описаниями, вариантами исполнения, позволяет подробно ознакомиться с каждым товаром, Вы с легкостью можете формировать интерьер помещений, выбирая самые подходящие модели для Ваших заведений. Мебель для кафе представлена в богатстве дизайнерских находок и цветовых решений, стилей и направлений. Столы и стулья, мягкие диваны и кресла, банкетная и уличная мебель, разнообразная мебельная продукция представляется вниманию наших клиентов.
+		</p>
+		<p>
+			 Если Вас интересует стильная мебель для бара, купить ее можно у нас в самых различных вариациях. Но какой бы вариант Вы ни выбрали, это будет эргономичная, функциональная, красивая обстановка, которая, несомненно, будет привлекать внимание посетителей и способствовать доходности Вашего предприятия. Представленная у нас в разнообразии расцветок и форм различных моделей мебель для ресторанов позволяет роскошно обставить любые помещения, как небольшие залы, так и огромные. Комфортабельные, удобные предметы меблировки обеспечат самые лучшие условия для отдыха гостей, Вам остается только выбрать те варианты, которые наилучшим образом впишутся в интерьер Ваших помещений.
+		</p>
+	</div>
+</div>
+<!-- FOOTER -->
 <footer class="footer">
     <div class="container">
         <div class="row justify-content-between">
@@ -1318,8 +1442,8 @@
 						Подпишитесь, чтобы получать информацию о самых интересных событиях и выгодных предложениях ТехноБар                    
 					</div>
                     <form action="/bitrix/templates/tb/ajax/subscribe.php" method="post" data-category="engagement" data-action="subscribe" class="subscribe__form ajax-form">
-    <input type="email" class="subscribe__input" placeholder="Ваш email" name="mail" required>
-    <input class="subscribe__btn" type="submit" value="Отправить" />
+    <input type="email" class="subscribe__input" placeholder="Ваш email" name="mail" required="">
+    <input class="subscribe__btn" type="submit" value="Отправить">
 </form> 
                     <div class="subscribe__desc">
 						Нажимая кнопку «Отправить» вы соглашаетесь с договором оферты                   
@@ -1387,15 +1511,3 @@
         </div>
     </div>
 </footer>
-
-
-<script>
-    (function(w,d,u,b){
-        s=d.createElement('script');r=(Date.now()/1000|0);s.async=1;s.src=u+'?'+r;
-        h=d.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);
-    })(window,document,'https://cdn.bitrix24.ru/b2046829/crm/site_button/loader_2_r2qbd3.js');
-</script>
-
-    <div class="hide-elements"></div>
-</body>
-</html>
