--- a/index-hotel.html
+++ b/index-hotel.html
@@ -1058,6 +1058,7 @@
 	<input type="text" placeholder="Гостевая площадь:">
 	<input type="text" placeholder="Площадь кухонных момещений:">
 	<input type="text" placeholder="Количество посадочных мест:">
+	<input type="text" placeholder="Приблизительная дата открытия:">
 	<input name="form-btn" value="ОСТАВИТЬ ЗАЯВКУ" class="design-btn red-form-btn form-btn" type="submit">
   </form>
 </div>
