--- a/index-hotel.html
+++ b/index-hotel.html
@@ -765,10 +765,10 @@
 		</div>
 	</div>
 	<div class="ready-items ready-image-1">
-	   <a href="#"><img src="img/test-photo//test-1.jpg" alt=""></a>
+	   <a href="#"><img src="img/hotelrus.jpg" alt=""></a>
 	</div>
 	<div class="ready-items ready--2">
-		<a href="#"><img src="img/test-photo/test-2.jpg" alt=""></a>
+		<a href="#"><img src="img/pushkin.jpg" alt=""></a>
 	</div>
 
 </div>
@@ -1072,7 +1072,7 @@
 	<div class="example_1">
 		<div class="example-wrap">
           <div class="ex-item">
-			  <img src="img/test-photo/shape-test2.jpg" alt="example">
+			  <img src="img/guss.jpg" alt="example">
 			  <div class="example-text">
 			  <p>
 				  <span>Рыбатекст<br> используется дизайнерами,</span>
@@ -1087,7 +1087,7 @@
 		  </div>
 		  <div class="ex-item-shape">
 			  <div class="ex-item-shape-photo">
-			<img src="img/test-photo/main-shape.png" alt="example">
+			<img src="img/BusinessClub.png" alt="example">
 		      </div>
 			<div class="ex-item-shape-text">
 				
@@ -1105,7 +1105,7 @@
 		  </div>
 		</div>
 		  <div class="ex-item">
-			<img src="img/test-photo/shape-test2.jpg" alt="example">
+			<img src="img/design-hotel.jpg" alt="example">
 			<div class="example-text">
 			<p>
 				<span>Рыбатекст<br> используется дизайнерами,</span>
@@ -1121,7 +1121,7 @@
 	</div>
 	<div class="example_2">
 		<div class="example_item example-2-item">
-			<img src="img/test-photo/shape-test2.jpg" alt="example">
+			<img src="img/villa1.jpg" alt="example">
 			<div class="example-text">
 			<p>
 				<span>Рыбатекст<br> используется дизайнерами,</span>
@@ -1135,7 +1135,7 @@
 			</div>
 		</div>
 		<div class="example_item">
-			<img src="img/test-photo/shape-test2.jpg" alt="example">
+			<img src="img/park.jpg" alt="example">
 			<div class="example-text">
 			<p>
 				<span>Рыбатекст<br> используется дизайнерами,</span>
