--- a/index-hotel.html
+++ b/index-hotel.html
@@ -1177,18 +1177,13 @@
 			 </span>
 		 </div>
 		 <p>
-			Оптимизация все затрат, за счет знания
-			кухни изнутри (имеется в виду что опытный
-			менеджер знает, что, как работает и не нужно
-			покупать не чего лишнего) 			
+Наши специалисты поэтапно знают все об открытии ресторанов, баров, кафе, гостиниц и хостелов. Мы поможем вам минимизировать расходы, защитим от ошибок, дополнительных расходов и поможем обойти все "подводные камни"! 			
 		 </p>
 		</div>
 		 <ul class="ben-list">
-			 <li>Не чего лишнего - Личный менеджер
-				с реальным опытом управления рестораном</li>
-			 <li>Собственное производство мебели</li>
-			 <li>Оптовые цены на оборудование</li>
-			 <li>Свой монтаж, доставка, сборка</li>
+			 <li>Собственное производство сделает уникальную мебель по оптовым ценам</li>
+			 <li>Наши поставщики обеспечат максимально выгодные условия работы</li>
+			 <li>Все расходы прозрачны</li>
 		 </ul>
 	 </div>
 	 <div class="benefit-item">
@@ -1202,18 +1197,13 @@
 			 </span>
 		 </div>
 		 <p>
-			Оптимизация все затрат, за счет знания
-			кухни изнутри (имеется в виду что опытный
-			менеджер знает, что, как работает и не нужно
-			покупать не чего лишнего) 			
+			Ваш персональный менеджер возьмет на себя контроль над всеми службами, подрядчиками и отчетами. Собственное производство мебели и большой портфель партнеров позволят ускорить запуск проекта и не отвлекаться на переговоры и подписания договоров с подрядчиками!		
 		 </p>
 		</div>
 		 <ul class="ben-list">
-			 <li>Не чего лишнего - Личный менеджер
-				с реальным опытом управления рестораном</li>
-			 <li>Собственное производство мебели</li>
-			 <li>Оптовые цены на оборудование</li>
-			 <li>Свой монтаж, доставка, сборка</li>
+			 <li>Вы общаетесь с одним человеком</li>
+			 <li>Вы получаете комплексный подход и особые условия</li>
+			 <li>Не нужно ездить по разным поставщикам, мы подберем для вас лучших</li>
 		 </ul>
 	 </div>
 	 <div class="benefit-item">
@@ -1221,25 +1211,18 @@
 		 <div class="ben-title">
 			 <img src="img/benefit-med.png" alt="numbers">
 			 <span>
-				Качество
-				выполнения
-				задуманного
-				проекта				
+				Вы экономите 
+				нервы			
 			 </span>
 		 </div>
 		 <p>
-			Оптимизация все затрат, за счет знания
-			кухни изнутри (имеется в виду что опытный
-			менеджер знает, что, как работает и не нужно
-			покупать не чего лишнего) 			
+			Мы несем ответственность за работу на всех этапах. Вашим проектом будет заниматься специалист, а вам останется только смотреть на результаты и купить галстук к открытию! 			
 		 </p>
 		</div>
 		 <ul class="ben-list">
-			 <li>Не чего лишнего - Личный менеджер
-				с реальным опытом управления рестораном</li>
-			 <li>Собственное производство мебели</li>
-			 <li>Оптовые цены на оборудование</li>
-			 <li>Свой монтаж, доставка, сборка</li>
+			 <li>Мы решим любые проблемы</li>
+			 <li>Менеджер всегда на связи</li>
+			 <li>Соблюдение сроков, надежная логистика и монтаж с гарантией</li>
 		 </ul>
 	 </div>
   </div>
