--- a/index-main.html
+++ b/index-main.html
@@ -844,14 +844,26 @@
             </div>
             <div class="main-right">
                 <div class="main-right-top">
-					<img src="img/main-page/right-photo-bot-2.jpg" alt="" class="img-change">
-                    <img src="img/main-page/right-photo-top-1.jpg" class="first-right"alt="" style="margin-right: 22px;">
-                    <img src="img/main-page/right-photo-top-2.jpg"  class="right-top-last" alt="">
+					<div class="top-photo img-change">
+					    <img src="img/main-page/right-photo-bot-2.jpg" alt="">
+					</div>
+					<div class="top-photo first-right">
+					    <img src="img/main-page/right-photo-top-1.jpg" alt="" style="margin-right: 22px;">
+					</div>
+					<div class="top-photo right-top-last">
+					    <img src="img/main-page/right-photo-top-2.jpg" alt="">
+				    </div>
                 </div>
                 <div class="main-right-bottom">
-					<img src="img/main-page/right-photo-top-2.jpg" alt="" class="img-change">
-                    <img src="img/main-page/right-photo-bot-1.jpg" class="first-right" alt="" style="margin-right: 22px;">
-                    <img src="img/main-page/right-photo-bot-2.jpg" alt="" class="right-bottom-last">
+					<div class="bottom-photo img-change">
+					    <img src="img/main-page/right-photo-top-2.jpg" alt="">
+					</div>
+					<div class="bottom-photo first-right">
+					    <img src="img/main-page/right-photo-bot-1.jpg" alt="" style="margin-right: 22px;">
+					</div>
+					<div class="bottom-photo right-bottom-last">
+					   <img src="img/main-page/right-photo-bot-2.jpg"  alt="">
+				    </div>
                 </div>
             </div>
 		</div>
@@ -862,11 +874,17 @@
     <div class="images-grid">
         <div class="box-image mainp-box-image">
             <div class="left-photos left-mainp-photos">
-                <img src="img/yellow-1.png" alt="forniture">
-                <img src="img/red-1.png" alt="forniture">
+				<div class="yellow">
+				   <img src="img/yellow-1.png" alt="forniture">
+				</div>
+				<div class="grid-img">
+				   <img src="img/red-1.png" alt="forniture">
+				</div>
             </div>
-            <div class="right-photo">
-                <img src="img/blue-big-1.png" alt="forniture">
+            <div class="right-photo mainp-right-photo">
+				<div class="blue-big">
+				    <img src="img/blue-big-1.png" alt="forniture">
+			    </div>
             </div>
 		</div>
 		<div class="grid-description mainp-text-grid">
@@ -884,7 +902,7 @@
 				</p>
 			</div>
 				<div class="more-button">
-					<a href="#"><div class="more-btn main-more-btn">ПОДРОБНЕЕ</div></a>
+					<a href="#"><div class="more-btn main-more-btn style-mainp-grid-description">ПОДРОБНЕЕ</div></a>
 				</div>
 		</div>
     </div>
@@ -899,9 +917,12 @@
 <div class="container">
 	<div class="title"><span>Торговая мебель</span></div>
 	<div class="trade-box">
-			<img src="img/main-page/trade-1.jpg" alt="trade-1">
-			<img src="img/main-page/trade-2.png" class="trade-style" alt="">
-			<img src="img/main-page/trade-3.png" alt="">
+			<img src="img/main-page/trade-1.jpg" class="trade-style-img" alt="trade-1">
+			<img src="img/main-page/trade-2.png" class="trade-style trade-style-img" alt="">
+	         <div class="adap-trade">
+				<img src="img/main-page/trade-3.png" alt="">
+				<img src="img/main-page/left-photo-top.jpg" class="trade-hidden" alt="">
+			</div>	
 			<div class="main-grid-description trade-description trade-style">
                 <h2>
                     НАчем ПОСИДЕТЬ,<br>
@@ -918,7 +939,7 @@
                 </p>
                <a href="#"><div class="more-btn main-more-btn">ПОДРОБНЕЕ</div></a>
             </div>
-			<img src="img/main-page/trade-4.jpg" class="trade-style last-trade" alt="">
+			<img src="img/main-page/trade-4.jpg" class="trade-style last-trade trade-style-img" alt="">
 	</div>
 </div>
 <div class="container">
