rename css and created js

--- a/index-hotel.html
+++ b/index-hotel.html
@@ -18,7 +18,7 @@
 <link href="js/jquery.fancybox.min.css" type="text/css"  data-template-style="true"  rel="stylesheet" />
 <link href="js/jquery.mCustomScrollbar.css" type="text/css"  data-template-style="true"  rel="stylesheet" />
 <link href="css/custom.css?158280628634425" type="text/css"  data-template-style="true"  rel="stylesheet" />
-<link href="css/hotstyle.css" rel="stylesheet">
+<link href="css/page.css" rel="stylesheet">
 <link rel="stylesheet" href="owlcarousel/assets/owl.carousel.min.css">
 <link rel="stylesheet" href="owlcarousel/assets/owl.theme.default.min.css">
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -46,6 +46,7 @@
 
 <script type="text/javascript" src="js/jquery.hidden.text.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/page.js"></script>
 <script type="text/javascript" src="js/jquery.fancybox.min.js"></script>
 <script type="text/javascript" src="js/jquery.mCustomScrollbar.concat.min.js"></script>
 <script type="text/javascript" src="js/custom.js"></script>
