--- a/index-main.html
+++ b/index-main.html
@@ -18,7 +18,7 @@
 <link href="js/jquery.fancybox.min.css" type="text/css"  data-template-style="true"  rel="stylesheet" />
 <link href="js/jquery.mCustomScrollbar.css" type="text/css"  data-template-style="true"  rel="stylesheet" />
 <link href="css/custom.css?158280628634425" type="text/css"  data-template-style="true"  rel="stylesheet" />
-<link href="css/hotstyle.css" rel="stylesheet">
+<link href="css/page.css" rel="stylesheet">
 <link rel="stylesheet" href="owlcarousel/assets/owl.carousel.min.css">
 <link rel="stylesheet" href="owlcarousel/assets/owl.theme.default.min.css">
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -920,8 +920,12 @@
 			<img src="img/main-page/trade-1.jpg" class="trade-style-img" alt="trade-1">
 			<img src="img/main-page/trade-2.png" class="trade-style trade-style-img" alt="">
 	         <div class="adap-trade">
-				<img src="img/main-page/trade-3.png" alt="">
-				<img src="img/main-page/left-photo-top.jpg" class="trade-hidden" alt="">
+				 <div class="trade-3">
+				    <img src="img/main-page/trade-3.png" alt="">
+			    </div>
+				<div class="trade-hidden">
+				     <img src="img/main-page/trade-hide.jpg" alt="">
+			    </div>
 			</div>	
 			<div class="main-grid-description trade-description trade-style">
                 <h2>
@@ -956,7 +960,7 @@
 				</p>
 		    </div>
 		</div>
-		<div class="production-item">
+		<div class="production-item production-item-3">
 			<img src="img/main-page/producntion.png" alt="prod.">
 			<div class="production-item-text">
 				<p>
