last commit for 16.03

--- a/index-main.html
+++ b/index-main.html
@@ -1230,7 +1230,9 @@
 			</span>
 		</div>
 	</div>
-
+	<div class="title title-news-item-first title-hidden">
+		<span>АКЦИИ</span>
+	</div>
 <div class="news">
 	<div class="news-wrapper">
 		<div class="news-wrapper-item news-wrapper-item-on">
@@ -1283,6 +1285,12 @@
 		</div>
 	</div>
 	</div>
+	<div class="container this-container">
+		<div class="title title-hidden">
+			<span>НОВОСТИ</span>
+		</div>
+    </div>
+	
      <div class="news-anwrapper">
 		<div class="news-wrapper-item">
 			<div class="stock right-first-stock">
