--- a/index-hotel.html
+++ b/index-hotel.html
@@ -80,7 +80,7 @@
 						</div>
 </div>
             <!--'start_frame_cache_user_login_block'-->                <div class="user-block">
-                                            <a href="/auth/" class="header__callback">
+                        <a href="/auth/" class="header__callback">
                             <span class="header__callback-span">Вход</span>
                             <svg version="1.1"
                                  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
@@ -655,13 +655,11 @@
 
 
 <div class="lead">
-	<div class="container">     
-		
-			
-			
+	<div class="container">     		
 <div class="lead__slider">
 <div class="owl-carousel owl-theme">
-									<a href="#">    				<div class="lead__item" id="bx_3218110189_14277" >
+		<a href="#">    				
+			    <div class="lead__item" id="bx_3218110189_14277" >
 				<div class="lead__img" style="background-image: url(img/main-slide.jpg)"></div>
 				<div class="lead__content">
 					<span><b>Вся мебель для кафе и ресторанов. </b><br>Изготовление на заказ под ваш дизайн проект. </span>
@@ -689,7 +687,7 @@
   <div class="container">
 <div class="design">
 <div class="design_description design-frame">
-	<h1>
+	<h2>
 		<span class="design_main_text">
 			<span class="light-design">БОЛЕЕ 10 ЛЕТ ПОМОГАЕМ
 				 <br class="first-br-design"> 
@@ -699,14 +697,14 @@
 				ОТКРЫВАТЬ ОТЕЛИ
 		    </span>
 		</span>
-	</h1>
+	</h2>
 	<span class="design_description">
 		<p>
 			В ТехноБар собралась уникальная команда специалистов, которые помогут вам
-открыть заведение любой сложнисти, размера и бюджета!
-Мы поможем вам на всех этапах.
-Наша база поставщиков и подрядчиков, в купе с огромным опытом работы,
-позволят вам пройти весь путь от идеи до первых клиентов на одном дыхании!
+			открыть заведение любой сложнисти, размера и бюджета!
+			Мы поможем вам на всех этапах.
+			Наша база поставщиков и подрядчиков, в купе с огромным опытом работы,
+			позволят вам пройти весь путь от идеи до первых клиентов на одном дыхании!
 		</p>
 	</span>
 </div>
