--- a/index-main.html
+++ b/index-main.html
@@ -68,7 +68,7 @@
 						</div>
 </div>
             <!--'start_frame_cache_user_login_block'-->                <div class="user-block">
-                                            <a href="/auth/" class="header__callback">
+                      <a href="/auth/" class="header__callback">
                             <span class="header__callback-span">Вход</span>
                             <svg version="1.1"
                                  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
@@ -649,19 +649,20 @@
 			
 <div class="lead__slider">
 <div class="owl-carousel owl-theme">
-									<a href="#">    				<div class="lead__item" id="bx_3218110189_14277" >
+		<a href="#">    			
+				<div class="lead__item" id="bx_3218110189_14277" >
 				<div class="lead__img" style="background-image: url(img/main-slide.jpg)"></div>
 				<div class="lead__content">
 					<span><b>Вся мебель для кафе и ресторанов. </b><br>Изготовление на заказ под ваш дизайн проект. </span>
 				</div>
 			</div>
-		</a>							                    				<div class="lead__item" id="bx_3218110189_14278" >
+		</a>	<div class="lead__item" id="bx_3218110189_14278" >
 				<div class="lead__img" style="background-image: url(img/main-slide.jpg)"></div>
 				<div class="lead__content">
 					<span><b>Скидка 20%</b><br>на мебель нашего производства</span>
 				</div>
 			</div>
-																		<div class="lead__item" id="bx_3218110189_14279" >
+				<div class="lead__item" id="bx_3218110189_14279" >
 				<div class="lead__img" style="background-image: url(img/main-slide.jpg)"></div>
 				<div class="lead__content">
 					<span><b>Скидка 20%</b><br>на мебель нашего производства</span>
