done with adaptive

--- a/index-main.html
+++ b/index-main.html
@@ -676,14 +676,14 @@
 <!-- HEADER PART -->
 
 <div class="container">
-    <h1 class="main-title">
+	<div class="main-title-wrapper">
+    <h2 class="main-title">
         <span>Техно Бар</span>– это компания, в которой широчайший ассортимент соединяется с  многолетним
-        опытом миксологии бизнес-пространств. А человечный подход  и клиентоориентированность<br> 
+        опытом миксологии бизнес-пространств. А человечный<br class="main-title-b"> подход  и клиентоориентированность 
         гарантируют, что идеальный коктейль не будет разбавлен.        
-    </h1>
+	</h2>
 </div>
-
-<div class="container">
+</div>
     <div class="features">
         <div class="container">        
             <div class="features__wr">
@@ -702,7 +702,7 @@
                         быстро заполнить макеты 
                         или прототипы содержимым. 
                     </p>
-                    <span class="goods__btn btn header-btn"><span>ПОДРОБНЕЕ</span></span>
+                    <span class="goods__btn btn header-btn main-header-btn"><span>ПОДРОБНЕЕ</span></span>
 				    </div>
 				</li>
 
@@ -721,7 +721,7 @@
                         быстро заполнить макеты 
                         или прототипы содержимым. 
                     </p>
-                    <span class="goods__btn btn header-btn"><span>ПОДРОБНЕЕ</span></span>
+                    <span class="goods__btn btn header-btn main-header-btn"><span>ПОДРОБНЕЕ</span></span>
 				   </div>
 				</li>
 
@@ -738,7 +738,7 @@
                         быстро заполнить макеты 
                         или прототипы содержимым. 
                     </p>
-                    <span class="goods__btn btn header-btn"><span>ПОДРОБНЕЕ</span></span>
+                    <span class="goods__btn btn header-btn main-header-btn"><span>ПОДРОБНЕЕ</span></span>
 				   </div>
 
 				</li>
@@ -756,7 +756,7 @@
                         быстро заполнить макеты 
                         или прототипы содержимым. 
                     </p>
-                    <span class="goods__btn btn header-btn"><span>ПОДРОБНЕЕ</span></span>
+                    <span class="goods__btn btn header-btn main-header-btn"><span>ПОДРОБНЕЕ</span></span>
                 </div>
             </li>
 
@@ -773,18 +773,17 @@
                         быстро заполнить макеты 
                         или прототипы содержимым. 
                     </p>
-                    <span class="goods__btn btn header-btn"><span>ПОДРОБНЕЕ</span></span>
+                    <span class="goods__btn btn header-btn main-header-btn"><span>ПОДРОБНЕЕ</span></span>
 				</div>
 			</li>
 		</ul>
             </div>
         </div>
     </div>
-</div>
 
 <div class="container">
     <div class="title"><span>Дизайн и проектирование</span></div>
-    <div class="bussiness">
+    <div class="bussiness main-bussiness">
         <div class="bussiness-description design-main__description main-page-description">
             <h2>
                 ОТ ЯРКОГО ОБРАЗА<br class="bussiness-title">
@@ -798,7 +797,7 @@
                 наличие самого текста или продемонстрировать
                 типографику в деле.                
             </p>
-           <a href=""><div class="more-btn main-more-btn">ПОДРОБНЕЕ</div></a>
+           <a href=""><div class="more-btn main-more-btn main-more-btn-bussiness">ПОДРОБНЕЕ</div></a>
         </div>
         <div class="bussiness-items first-item first-main-item">
             <img src="img/main-page/design-project.jpg" alt="">
@@ -827,7 +826,7 @@
 					<img src="img/main-page/left-photo-bot.jpg" alt="">
 			    </div>
             </div>
-            <div class="main-grid-description">
+            <div class="main-grid-description main-grid-description-first">
                 <h2>
                     НАчем ПОСИДЕТЬ,<br>
                     ЗА ЧЕМ Посидеть<br> 
@@ -1296,50 +1295,56 @@
 		<div class="news-wrapper-item">
 			<div class="stock right-first-stock">
 				<img src="img/main-page/kitchen.png" alt="kitchen">
-				<h2>ОТКРЫТИЕ НОВОГО Кафе<br> 
-					В ЦЕНТРЕ МОСКВЫ</h2>
-				<p>
-					Рыбатекст используется дизайнерами,
-					проектировщиками и фронтендерами, когда
-					нужно быстро заполнить макеты или прототипы 
-					содержимым. Это тестовый контент, который
-					не должен нести никакого смысла, лишь показать
-					наличие самого текста или продемонстрировать
-					типографику в деле.<br>
-					<span>15 апреля</span> 
-				</p>
+				<div class="right-text-wrapper">
+					<h2>ОТКРЫТИЕ НОВОГО Кафе<br> 
+						В ЦЕНТРЕ МОСКВЫ</h2>
+					<p>
+						Рыбатекст используется дизайнерами,
+						проектировщиками и фронтендерами, когда
+						нужно быстро заполнить макеты или прототипы 
+						содержимым. Это тестовый контент, который
+						не должен нести никакого смысла, лишь показать
+						наличие самого текста или продемонстрировать
+						типографику в деле.<br>
+						<span>15 апреля</span> 
+					</p>
+			   </div>
 			</div>
 			<div class="stock">
 				<img src="img/main-page/kitchen.png" alt="kitchen">
-				<h2>ОТКРЫТИЕ НОВОГО Кафе<br> 
-					В ЦЕНТРЕ МОСКВЫ</h2>
-				<p>
-					Рыбатекст используется дизайнерами,
-					проектировщиками и фронтендерами, когда
-					нужно быстро заполнить макеты или прототипы 
-					содержимым. Это тестовый контент, который
-					не должен нести никакого смысла, лишь показать
-					наличие самого текста или продемонстрировать
-					типографику в деле.<br>
-					<span>15 апреля</span> 
-				</p>
+				<div class="right-text-wrapper">
+					<h2>ОТКРЫТИЕ НОВОГО Кафе<br> 
+						В ЦЕНТРЕ МОСКВЫ</h2>
+					<p>
+						Рыбатекст используется дизайнерами,
+						проектировщиками и фронтендерами, когда
+						нужно быстро заполнить макеты или прототипы 
+						содержимым. Это тестовый контент, который
+						не должен нести никакого смысла, лишь показать
+						наличие самого текста или продемонстрировать
+						типографику в деле.<br>
+						<span>15 апреля</span> 
+					</p>
+			    </div>
 			</div>
 		</div>
 		<div class="news-wrapper-item news-wrapper-item-off">
 			<div class="stock stock-off">
 				<img src="img/main-page/kitchen.png" alt="kitchen">
-				<h2>ОТКРЫТИЕ НОВОГО Кафе<br> 
-					В ЦЕНТРЕ МОСКВЫ</h2>
-				<p>
-					Рыбатекст используется дизайнерами,
-					проектировщиками и фронтендерами, когда
-					нужно быстро заполнить макеты или прототипы 
-					содержимым. Это тестовый контент, который
-					не должен нести никакого смысла, лишь показать
-					наличие самого текста или продемонстрировать
-					типографику в деле.<br>
-					<span>15 апреля</span> 
-				</p>
+				<div class="right-text-wrapper">
+					<h2>ОТКРЫТИЕ НОВОГО Кафе<br> 
+						В ЦЕНТРЕ МОСКВЫ</h2>
+					<p>
+						Рыбатекст используется дизайнерами,
+						проектировщиками и фронтендерами, когда
+						нужно быстро заполнить макеты или прототипы 
+						содержимым. Это тестовый контент, который
+						не должен нести никакого смысла, лишь показать
+						наличие самого текста или продемонстрировать
+						типографику в деле.<br>
+						<span>15 апреля</span> 
+					</p>
+			    </div>
 			</div>
 		</div>
 	 </div>
