--- a/index-main.html
+++ b/index-main.html
@@ -983,6 +983,7 @@
 				</p>
 		</div>
 	</div>
+  </div>
 </div>
 <div class="container">
 	<div class="title"><span>ПОПУЛЯРНЫЕ товары</span></div>
@@ -1353,6 +1354,7 @@
 <div class="container">
 	<div class="title"><span>Другие категории</span></div>
 </div>	
+<div class="container">
 	<ul class="section__list">
 		<li class="section__item">
 <div class="section__title">Ширина, см</div>
@@ -1436,8 +1438,7 @@
 </li>
 </ul>
 </div>
-
-
+</div>
 <div class="container main_page_after_test paragraph">
 	<div>
 		<p>
@@ -1554,3 +1555,6 @@
         </div>
     </div>
 </footer>
+
+</body>
+</html>
